# libtarp

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  done
.github/workflows/: test.yml
cmake/: CMakeLists.txt  cmake_utils.cmake  dependencies.cmake  libtarp.pc.in
cohort/: cohort.c
common/: Makefile
common/include/tarp/: bits.h  iterator.h  timeutils.h
common/src/: mocom.c  socks.c  timeutils.c
common/tests/: tarputils_tests.c  tests.c
docs/: bitarray.md
examples/: CMakeLists.txt  c_event_example.c  cxx_event_example.cxx  heap_dll_example.c  iniparse.c
examples/unix-domain-socket-fd-passing/: README.md  client.c  common_defs.h  server.c
include/tarp/: avl.h  avl_impl.h  bitarray.h  bits.h  bits.hxx  bst.h  bst_impl.h  buffer.hxx  callback.hxx  callwrap.hxx  cancellation_token.hxx  cohort.h  common.h  container.h  container_impl.h  counter.hxx  cxxcommon.hxx  demonic.h  dllist.h  dllist_impl.h  error.h  evchan.hxx  event.h  event.hxx  event_flags.h  exception.hxx  expected.hpp  filters.hxx  floats.h  functools.hxx  hasht.h  hasht_impl.h  heap.h  heap_impl.h  idman.hxx  iniparse.h  intrusive.h  ioutils.h  ioutils.hxx  log.h  (+38 more)
include/tarp/hash/: checksum.hxx  crc.hxx  hash.h  md5sum.h
include/tarp/hash/checksum/: adler32.hxx  fletcher.hxx  inet.hxx  sha256.hxx
include/tarp/hash/crc/: crc.hxx
include/tarp/impl/: avl_impl.h  container_impl.h  dllist_impl.h  event.txx  event_impl.h  hasht_impl.h  heap_impl.h  math_impl.h  staq_impl.h  vector_impl.h
make/: mods.mk
mods/staq/tests/: staq_tests.c  tests.c
old/staq/include/tarp/: staq.h
old/staq/tests/: staq_tests.c  tests.c
package/: libtarp-config.cmake.in
src/hash/: adler32.cxx  adler32.md  checksum-main.cxx  checksum.cxx  inet.cxx  inet_checksum.cxx
src/hash/crc/: crc.cxx
src/hash/md5/: md5sum-main.c  md5sum.c
src/hash/sha/: sha256.cxx
src/misc/: bitarray.c  bits.c  bits.cxx  buffer.cxx  cancellation_token.cxx  cohort.c  common.c  demonic.c  error.c  event.c  event.cxx  event_shared_defs.h  filters.cxx  floats.c  hash.c  idman.cxx  ioutils.c  ioutils.cxx  linux-event.c  log.c  math.c  posix_signal_helpers.cxx  process.c  process.cxx  random.cxx  sched.cxx  signal.cxx  socks.c  string_utils.cxx  stringutils.cxx  thread_entity.cxx  threading.cxx  timeutils.c  timeutils.cxx
src/mods/: dllist.c
src/mods/avltree/: avl.c
src/mods/bst/: README.md  bst.c
src/mods/dllist/: dllist.c
src/mods/hasht/: hasht.c
src/mods/heap/: explicit.c  implicit.c
src/mods/staq/: staq.c
src/mods/vector/: vector.c
src/parsers/: iniparse.c  iniparse.cxx  iniparse_helpers.h
staging/include/tarp/: stack.h
tarp/common/: Makefile  demonic.c  floats.c  floats.h  mobit.c  mocom.c  mocom.h  morre.h  q
tarp/common/include/: demonic.h  intrusive.h  socks.h
tarp/common/include/tarp/: common.h  hex.i  mobit.h  timeutils.h
tarp/common/lua/: demonic.c  demonic.h  demonic_readme.txt
tarp/common/src/: bits.c  demonic.c  floats.c  hex.c  mobit.c  mocom.c  q  socks.c  t.c  timeutils.c
tarp/common/tests/: tests.c
tarp/mods/cdll/: README.md
tarp/mods/cdll/include/tarp/: cdll.h
tarp/mods/cdll/src/: cdll.c
tarp/mods/cdll/tests/: cdll_tests.c  tests.c
tarp/mods/circular/: Makefile
tarp/mods/circular/include/tarp/: circular.h
tarp/mods/circular/src/: circular.c  tags
tarp/mods/circular/tests/: circular_tests.c  tests.c
tarp/mods/dll/: Makefile  README.md
tarp/mods/dll/include/tarp/: dllist.h
tarp/mods/dll/src/: dllist.c
tarp/mods/dll/tests/: dll_tests.c  tests.c
tarp/mods/mostack/: Makefile
tarp/mods/mostack/src/: stack.c  tags
tarp/mods/mostack/tests/: stack_tests.c  tests.c
tarp/mods/ptrstaq/include/tarp/: staq.h
tarp/mods/ptrstaq/src/: ptrstaq.c
tarp/mods/ptrstaq/tests/: ptrstaq_tests.c  tests.c
tarp/mods/sll/: .depends  Makefile  valgrind.txt
tarp/mods/sll/include/tarp/: sllist.h
tarp/mods/sll/src/: sllist.c
tarp/mods/sll/tests/: sll_tests.c  tests.c
tarp/mods/stack/include/tarp/: stackk.h
tarp/mods/stack/tests/: stack_tests.c  tests.c
tarp/mods/staq/include/tarp/: staq.h
tarp/mods/staq/tests/: staq_tests.c  tests.c
tarp/mods/xheap/: Makefile
tarp/mods/xheap/include/tarp/: xheap.h
tarp/mods/xheap/src/: xheap.c
tarp/mods/xheap/tests/: staq_tests.c  tests.c
tests/: CMakeLists.txt
tests/avl/: avl_tests.c  tests.c
tests/bitarray/: tests.c
tests/bits/: bits.cxx
tests/callback/: main.cxx
tests/cexec/: cexec.c
tests/cxxexec/: cxxexec.cxx
tests/dllist/: dllist_tests.c  tests.c
tests/evchan/: evchan_test.cxx  evchan_test.hxx  event_aggregator_test.cxx  event_aggregator_test.hxx  event_broadcaster_test.cxx  event_broadcaster_test.hxx  event_rstream.cxx  event_stream_test.hxx  event_wstream.cxx  main.cxx  trunk_test.cxx  trunk_test.hxx
tests/hash/: adler32.cxx  crc.cxx  fletcher.cxx  inet_checksum.cxx  inet_checksum_inputs.cxx  main.cxx  sha256.cxx  sha256_hmac.cxx
tests/hasht/: hasht_tests.c  tests.c
tests/heap/: heap_tests.c  tests.c
tests/iniparse/: tests.c
tests/math/: tests.cxx
tests/misc/: tarputils_tests.c  tests.c
tests/pipeline/: pipeline.cxx
tests/random/: tests.cxx
tests/scripts/: exec_test.sh  readme.md
tests/signals/: tests.cxx
tests/staq/: staq_tests.c  tests.c
tests/transforms/: transforms.cxx
tests/vector/: tests.c
tests/word_iterator/: main.cxx
